--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "drei": "^0.0.60",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-fast-marquee": "^1.3.2",
+    "react-icons": "^4.4.0",
+    "react-lottie": "^1.2.3",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
     "react-three-fiber": "^4.2.12",
+    "sass": "^1.50.0",
     "three": "^0.118.3"
   },
   "scripts": {
