--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "drei": "^0.0.60",
+    "framer-motion": "^6.3.11",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-fast-marquee": "^1.3.2",
     "react-icons": "^4.4.0",
+    "react-intersection-observer": "^9.2.2",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "3.4.1",
